test/types/type_variables/jplevyak/where-3-error.good
where-3-error.chpl:1: In function '__init_where-3-error':
where-3-error.chpl:5: error: Unresolved call 'f(t=float, 1)'
error: Candidates are:
where-3-error.chpl:1: error:   f(type t, x: any)
